--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,6 +1,7 @@
-# Hello bookdown 
+# (PART\*) Lecture 4  {-}
 
-All chapters start with a first-level heading followed by your chapter title, like the line above. There should be only one first-level heading (`#`) per .Rmd file.
+# Input dataset  
+
 
 ## A section
 
