--- a/03-parts.Rmd
+++ b/03-parts.Rmd
@@ -12,33 +12,38 @@ dds_factors <- DESeqDataSetFromMatrix(countData = round(data[,-c(1)]), colData =
 ```{r}
 dds_analysis <- DESeq(dds_factors)
 ```
-
+Plot dispertion estimates:
 ```{r dispest, cache = TRUE, fig.width = 6, fig.height = 5.5, fig.align = "center"}
 plotDispEsts(dds_analysis)
 ```
-
-
+To tell DESeq2 which groups we wish to compare, we supply the contrasts we would like to make using the contrast argument.
 ```{r}
 contrast_pbs <- c("Factors", "KO_PBS", "Control_PBS")
 contrast_lps <- c("Factors", "KO_LPS", "Control_LPS")
 ```
 
-
+To build our results table we will use the results() function. 
 ```{r}
 res_unshrunken_pbs <- results(dds_analysis, contrast=contrast_pbs, alpha = 0.05)
 res_unshrunken_lps <- results(dds_analysis, contrast=contrast_lps, alpha = 0.05)
 ```
 
+To generate more accurate log2 fold change estimates, DESeq2 allows for the shrinkage of the log2 fold changes estimates toward zero when the information for a gene is low.
 ```{r}
 res_pbs <- lfcShrink(dds_analysis, contrast=contrast_pbs, res=res_unshrunken_pbs, type='normal')
 res_lps <- lfcShrink(dds_analysis, contrast=contrast_lps, res=res_unshrunken_lps, type='normal')
 ```
+To illustrate the effect of log2 foldchange shrinkage we will use the MA plot. The MA plot shows the mean of the normalized counts versus the log2 foldchanges for all genes tested. The genes that are significantly DE are colored.
 
 ```{r ma_shrunken, cache = TRUE, fig.width = 6, fig.height = 5.5, fig.align = "center"}
 plotMA(res_pbs, ylim=c(-3,5))
 ```
 
+:::design
+**Task 1**: Plot the unshrunken results and save the plot as pdf. Are there any differences between unshrunken and shrunken results? Provide a brief explanation.
+:::
 
+Check the results summary for PBS and LPS comparisons:
 ```{r}
 summary(res_pbs, alpha = 0.05)
 ```
@@ -46,30 +51,31 @@ summary(res_pbs, alpha = 0.05)
 ```{r}
 summary(res_lps, alpha = 0.05)
 ```
-
+Now we are ready to extract significant differentially expressed genes. We will define significant genes as those satisfying the |FDR p-value < 0.05| and |log2(Fold Change)| > 0.58:
 ```{r}
 padj.cutoff <- 0.05
 lfc.cutoff <- 0.58
 ```
 
-
+Convert the results table into a tibble:
 ```{r}
-res_pbs_tb <- res_pbs %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
-res_lps_tb <- res_lps %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
+res_pbs_tb <- res_pbs %>% 
+              data.frame() %>% 
+              rownames_to_column(var="gene") %>% 
+              as_tibble()
+res_lps_tb <- res_lps %>% 
+              data.frame() %>% 
+              rownames_to_column(var="gene") %>% 
+              as_tibble()
 ```
 
-```{r}
-head(res_pbs_tb)
-head(res_lps_tb)
-```
-
-
+Select significant genes:
 ```{r}
 sig_pbs <- res_pbs_tb %>%dplyr::filter(padj < padj.cutoff & abs(log2FoldChange) >= lfc.cutoff)
 sig_lps <- res_lps_tb %>% dplyr::filter(padj < padj.cutoff & abs(log2FoldChange) >= lfc.cutoff)
 ```
 
-
+Intriguingly, the number of significant genes is almost twice more in the comparison with LPS compared to PBS-treated data.
 ```{r}
 nrow(sig_pbs)
 nrow(sig_lps)
