--- a/02-cross-refs.Rmd
+++ b/02-cross-refs.Rmd
@@ -1,4 +1,4 @@
-# Noramlization and Quality control {#cross}
+# Normalization and Quality control {#cross}
 
 ## Normalization
 The next step is to normalize the count data in order to be able to make fair gene comparisons between samples.
@@ -88,7 +88,7 @@ plotPCA.mystyle(rld)
 
 By default the function `plotPCA.custom` uses the top 500 most variable genes. You can change this by adding the ntop argument and specifying how many genes you want to use to draw the plot.
 
-## Correlation Heatmap (PCA)
+### Correlation Heatmap (PCA)
 The heatmap displays the correlation of gene expression for all pairwise combinations of samples in the dataset. Since the majority of genes are not differentially expressed, samples generally have high correlations with each other (values higher than 0.80). Samples below 0.80 may indicate an outlier in your data and/or sample contamination.
 
 Extract the rlog matrix from the object:
