--- a/index.Rmd
+++ b/index.Rmd
@@ -12,11 +12,17 @@ description: |
   The HTML output format for this example is bookdown::gitbook,
   set in the _output.yml file.
 link-citations: yes
+cover-image: docs/images/course_logo_v2.png
 github-repo: rstudio/bookdown-demo
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r react_tables, include=FALSE}
+library(reactable)
+library(rmarkdown)
 ```
 
 # Introduction
